--- a/mandelbulber2/formula/ui/spheretree.ui
+++ b/mandelbulber2/formula/ui/spheretree.ui
@@ -67,13 +67,6 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabledBx_false">
-       <property name="text">
-        <string>inner check</string>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="1">
       <widget class="MyDoubleSpinBox" name="spinbox_transf_scale_6">
        <property name="sizePolicy">
@@ -99,6 +92,13 @@
        </property>
        <property name="singleStep">
         <double>0.100000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0" colspan="2">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabledBx_false">
+       <property name="text">
+        <string>disable inner check</string>
        </property>
       </widget>
      </item>
