--- a/mandelbulber2/formula/ui/spheretree.ui
+++ b/mandelbulber2/formula/ui/spheretree.ui
@@ -464,16 +464,16 @@
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledX_false">
+         <widget class="MyCheckBox" name="checkBox_analyticDE_enabled_false">
           <property name="text">
-           <string>min aux.dist</string>
+           <string>z = oldZ</string>
           </property>
          </widget>
         </item>
         <item row="1" column="2">
-         <widget class="MyCheckBox" name="checkBox_analyticDE_enabled_false">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledX_false">
           <property name="text">
-           <string>z = oldZ</string>
+           <string>disable min aux.dist</string>
           </property>
          </widget>
         </item>
