--- a/mandelbulber2/formula/ui/testing_log.ui
+++ b/mandelbulber2/formula/ui/testing_log.ui
@@ -502,7 +502,7 @@ Offset:</string>
      <item row="1" column="0">
       <widget class="QLabel" name="label_304">
        <property name="text">
-        <string>symmetry:</string>
+        <string>rotation:</string>
        </property>
       </widget>
      </item>
