--- a/mandelbulber2/formula/ui/spheretree.ui
+++ b/mandelbulber2/formula/ui/spheretree.ui
@@ -63,7 +63,7 @@
      <item row="1" column="0">
       <widget class="QLabel" name="label_298">
        <property name="text">
-        <string>symmetry:</string>
+        <string>rotation:</string>
        </property>
       </widget>
      </item>
